--- a/tests/testdata/end2end/singlefile/simple.html
+++ b/tests/testdata/end2end/singlefile/simple.html
@@ -4,3 +4,7 @@
 {% let $s1 = 'aaa' %}
 {{ $s1 }}
 test_name='{{ test_name }}'
+{% let $bool_true = true %}
+true->{{ $bool_true }}
+{% let $bool_false = false %}
+false->{{ $bool_false }}
