--- a/tests/testdata/end2end/singlefile/simple.html
+++ b/tests/testdata/end2end/singlefile/simple.html
@@ -8,3 +8,7 @@ test_name='{{ test_name }}'
 true->{{ $bool_true }}
 {% let $bool_false = false %}
 false->{{ $bool_false }}
+$s1 == 'aaa'->{{ $s1 == 'aaa' }}
+$s1 == ''->{{ $s1 == '' }}
+$s1 != 'aaa'->{{ $s1 != 'aaa' }}
+$s1 != ''->{{ $s1 != '' }}
